assets/custom.css
/* ... */
@media only screen and (max-width: 768px) {
  nav {
    background: white;
    box-shadow: 0 4px 20px 0 rgba(0, 0, 0, 0.05);
    transition: box-shadow 0.3s linear 0s;
    display: flex;
    flex-direction: column;
    padding: 1.25rem 2rem;
  }

  nav ul {
    display: none;
  }

  nav li:not(.menu-element) {
    display: none;
  }

  nav .mobile-header {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    justify-items: center;
  }

  nav .mobile-header img,
  nav .mobile-header svg {
    height: 2rem;
  }

  #navbar-x-icon {
    display: none;
  }

  nav.open {
    transition: all 0.5s ease-in-out 0s;
    height: 100vh;
  }

  nav.open #navbar-x-icon {
    display: block;
  }

  nav.open #navbar-bar-icon {
    display: none;
  }

  nav.open ul {
    display: flex;
    flex-direction: column;
    height: 100%;
    justify-content: center;
    align-items: center;
    gap: 2.75rem
  }

  nav li {
    font-size: 2rem;
  }

  nav li.menu-element a {
    width: 11rem;
  }
}
/* CSS for Banner */

.banner {
  display: flex;
}

.banner > div:first-child {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
  gap: 2.75rem;
  max-width: 51rem;
  margin: auto;
}

.banner .title {
  font-size: 4.375rem;
  line-height: 4.375rem;
}

@media only screen and (max-width: 768px) {
  .banner > div:first-child {
    gap: 1.5rem;
  }

  .banner .title {
    font-size: 2.375rem;
    line-height: 2.375rem;
  }

  .banner h1,
  .banner h3,
  .banner p {
    width: 100%;
    text-align: left;
  }
}

.banner h3 {
  font-weight: 400;
}

.banner p {
  margin: auto;
}

#scroll-indicator {
  display: flex;
  flex-direction: row;
  justify-content: start;
  align-items: center;
  font-weight: 700;
  gap: 0.5rem;
  transform: rotate(90deg);
  position: fixed;
  bottom: 30%;
  left: 5%
}

#scroll-indicator.hidden {
  display: none;
}

@media only screen and (max-width: 1024px) {
  .banner .title {
    text-align: center;
  }
}

@media only screen and (max-width: 768px) {
  .banner > div {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 1.5rem;
    max-width: 100%;
    margin: auto;
  }

  .banner .logo {
    height: 3rem;
  }

  .banner .title {
    text-align: left;
  }

  #scroll-indicator {
    bottom: 10%
  }

  @media only screen and (max-height: 700px) {
    #scroll-indicator {
      transform: translateX(-1.5rem) rotate(90deg);
      left: 0;
    }
  }
}

/* CSS for Index Page  */

.cards {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: stretch;
  gap: 2.75rem;
  overflow-x: scroll;
}

.card {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  width: 30%;
  min-width: 14rem;
  padding: 2rem;
  box-shadow: 0 8px 30px 0 rgba(0, 0, 0, 0.10);
}

.card img {
  width: 4rem;
  height: 4rem;
  border-radius: 50%;
  margin-bottom: 2.5rem;
}

.card h4 {
  width: 100%;
  margin-bottom: 1rem;
}

@media only screen and (max-width: 1024px) {
  .card {
    padding: 1.5rem;
  }
}

@media only screen and (max-width: 768px) {

  .card img {
    display: none;
  }
}

.column-2 {
  display: grid;
  grid-template-columns: repeat(2, minmax(0, 1fr));
  grid-template-rows: 1fr;
  grid-template-areas: "content illustration";
  gap: 15%;
}

.column-2.reverse {
  grid-template-areas: "illustration content";
}

.column-2 .content {
  grid-area: content;
  display: flex;
  flex-direction: column;
  gap: 3.25rem;
}

.column-2 .content h2 {
  margin-bottom: 1.5rem;
}
.column-2 .content h3 {
  margin-bottom: 1.5rem;
}

.column-2 .illustration {
  overflow: hidden;
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center top;
  grid-area: illustration
}

.column-2 .image-cover {
  overflow: hidden;
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center center;
  grid-area: illustration
}

@media only screen and (max-width: 1024px) {
  .column-2 {
    gap: 5%;
  }
}

@media only screen and (max-width: 768px) {

  .column-2,
  .column-2.reverse {
    display: grid;
    grid-template-areas: "illustration" "content";
    grid-template-columns: 1fr;
    grid-template-rows: 15.75rem 1fr;
    gap: 2rem;
  }

  .column-2 .content {
    gap: 2.5rem;
  }

  .column-2 .content h2 {
    margin-bottom: 1rem;
  }

  .column-2 .content h3 {
    margin-bottom: 1.5rem;
  }

  .column-2 .illustration {
    background-position: center bottom;
  }

  .column-2 .image-cover {
    background-size: contain;
  }

}

.carrousel {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  gap: 7rem;
}

.carrousel .title span {
  display: flex;
  padding: 0.375rem 1.25rem;
  justify-content: center;
  align-items: center;
  border-radius: 1.25rem;
  color: #CACACF;
  border: 1px solid #CACACF;
}

.carrousel .swiper {
  overflow: visible;
  width: 100%;
}

.carrousel .swiper img {
  -webkit-filter: grayscale();
  filter: grayscale();
  display: block;
  object-fit: contain;
}

.carrousel .swiper .swiper-wrapper {
  -webkit-transition-timing-function: linear !important;
  -o-transition-timing-function: linear !important;
  transition-timing-function: linear !important;
}

@media only screen and (max-width: 768px) {
  .carrousel {
    gap: 3.75rem;
  }
}


/* CSS for Index Page - certifications */


#certifications .certification {
  height: 9.5rem;
  width: 18rem;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  gap: 2.375rem
}

#certifications .certification img {
  height: 3.75rem;
}

#certifications .certification span {
  text-align: center;
}

@media only screen and (max-width: 768px) {
  #certifications .certification {
    height: 6.75rem;
    width: 10rem;
    gap: 1.5rem
  }

  #certifications .certification img {
    height: 3.5rem;
  }
}
/* ... */

